# genai_genesis_2025

./: .env  README.md  app.py  cohere_test.py  gemini_test.py  mintality_app.py  requirements.txt
EmotionalSpending/: ai_assistant.py  analytics.py  app.py  daily_checkin.py  plaid_integration.py  pyproject.toml  utils.py  visualization.py
data/: transactions.csv  transactions_masked.csv
pages/: ai_assistant.py  dashboard.py  home.py  leaderboard.py  profile.py
utils/: cohere_service.py  emotion_service.py  emotion_utils.py  gemini_service.py  predictive_utils.py  test_cohere.py  test_gemini.py  transaction_utils.py
